--- a/Portfolio/portfolio.css
+++ b/Portfolio/portfolio.css
@@ -172,6 +172,9 @@
             height:110vh;
             width:auto;
         margin-top: 1200px;}
+        .text{margin-right: 100px;text-align: center;}
+        .Abouttext{ margin-left: 0%;margin-right:60px ; text-align: center;
+    }
     }
 
     
